--- a/first.css
+++ b/first.css
@@ -8,7 +8,18 @@
             display: none;
         }
     }
-    
+    ::-webkit-scrollbar{
+  width: 12px;
+}
+::-webkit-scrollbar-thumb{
+  background: linear-gradient(transparent, #00c6ff  );
+  border-radius: 6px;
+}
+::-webkit-scrollbar-thumb:hover{
+  background: linear-gradient(transparent, rgb(181, 63, 185));
+  border-radius: 6px;
+}
+
     body{
         background-color: rgb(5, 6, 24);
         font-size: 4em;
