--- a/first.css
+++ b/first.css
@@ -4,34 +4,35 @@
     *{
         margin: 0;
         padding: 0;
-            ::-webkit-scrollbar{
-  width: 12px;
-}
-::-webkit-scrollbar-thumb{
-  background: linear-gradient(transparent, #00c6ff  );
-  border-radius: 6px;
-}
-::-webkit-scrollbar-thumb:hover{
-  background: linear-gradient(transparent, rgb(181, 63, 185));
-  border-radius: 6px;
-}
+        ::-webkit-scrollbar{
+            width: 6px;
+          }
+          ::-webkit-scrollbar-thumb{
+            background: linear-gradient(transparent, #00c6ff  );
+            border-radius: 3px;
+          }
+          ::-webkit-scrollbar-thumb:hover{
+            background: linear-gradient(transparent, rgb(181, 63, 185));
+            border-radius: 3px;
+          }
+          
     }
 
-body::-webkit-scrollbar {
-  width: 12px;
-}
-
-body::-webkit-scrollbar-thumb {
-  background-color: #00c6ff;
-  border-radius: 6px;
-}
-
-body::-webkit-scrollbar-thumb:hover {
-  background-color: rgb(181, 63, 185);
-  border-radius: 6px;
-}
-
-
+    body::-webkit-scrollbar {
+        width: 12px;
+      }
+      
+      body::-webkit-scrollbar-thumb {
+        background-color: #00c6ff;
+        border-radius: 6px;
+      }
+      
+      body::-webkit-scrollbar-thumb:hover {
+        background-color: rgb(181, 63, 185);
+        border-radius: 6px;
+      }
+      
+    
     body{
         background-color: rgb(5, 6, 24);
         font-size: 4em;
@@ -41,6 +42,7 @@ body::-webkit-scrollbar-thumb:hover {
         overflow-x: hidden;
         overflow-y: auto;
         perspective: 300px;
+        
         }
         .intro_screen{
         height: 100vh;
@@ -299,3 +301,51 @@ body::-webkit-scrollbar-thumb:hover {
         padding: 10px; background-color: transparent; border: 2px solid black; color: black; width: 8rem; border-radius: 0.2rem;
         cursor: not-allowed;
     }
+
+
+.testimonial-wrapper{
+    height: 100vh;
+    width: 100vw;
+    background-color: red;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: -1vh;
+    overflow: hidden;
+    /* z-index: 100; */
+}
+.testimonial-left-parent{
+    height: 100%;
+    width: 30%;
+    overflow: hidden;
+    /* z-index: 100; */
+}
+.testimonial-left{
+    height: 90%;
+    width: 100%;
+    /* background-color: blue; */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 100;
+}
+.designation{
+    z-index: 200;
+    height: 10%;
+    color: white;
+    font-size: 2rem;
+    font-weight: 900;
+}
+.testimonial-right{
+    height: 100%;
+    width: 70%;
+    /* background-color: orange; */
+}
+
+.firstname, .lastname{
+    font-family: 'Bebas Neue', sans-serif;
+    color: white;
+    font-size: 4.5rem;
+    font-weight: 900;
+    margin: 2rem;
+}
